--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+@import url('/inter-tight.css');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 html, body{
-    font-family: "Inter", sans-serif;
-    color: #212835;
+    font-family: "Satoshi", "Inter", sans-serif;
+    color: #222227;
     scroll-behavior: smooth;
     overflow-x: hidden;
     scroll-padding: 110px;
+}
+
+body {
+  font-family: 'Satoshi', 'Inter', sans-serif;
+  font-weight: 400;
+  background-color: #fdfcf9;
+  color: #222227;
 }
 
 .custom-scrollbar::-webkit-scrollbar {
@@ -52,4 +60,11 @@ html, body{
   100%{
     background-position: 100% 0;
   }
+}
+
+:root {
+  --gray-1: #222227;
+  --gray-2: #494949;
+  --gray-3: #6b6b6b;
+  --black: #000000;
 }
